fixed styles for vertical align of the button in a search box

--- a/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
+++ b/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
@@ -3435,7 +3435,7 @@ ul.picker__list {
     width: 70px;
     display: inline-block;
     margin-left: -1px;
-    margin-top: -4px;
+    vertical-align: top;
   }
   #portal-header #portal-searchbox label {
     font-size: 86.667%;
